// buildscript는 맨 위에 와야 함
buildscript {
    ext {
        flywayVersion = '10.19.0'  // 최신 버전
    }
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath "org.flywaydb:flyway-gradle-plugin:${flywayVersion}"
        classpath "org.flywaydb:flyway-mysql:${flywayVersion}"  // MySQL 8.4 지원을 위해 추가
    }
}

plugins {
    id 'java'
    id 'war'
    id 'org.jetbrains.kotlin.jvm'
}

group 'org.scoula'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

ext {
    junitVersion = '5.10.2'
    springVersion = '5.3.37'
    lombokVersion = '1.18.30'
    springSecurityVersion = '5.8.13'
}


tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}


dependencies {
    // 스프링
    implementation("org.springframework:spring-context:${springVersion}")
            { exclude group: 'commons-logging', module: 'commons-logging' }
    implementation "org.springframework:spring-webmvc:${springVersion}"
    implementation 'javax.inject:javax.inject:1'


    // 보안
    implementation("org.springframework.security:spring-security-web:${springSecurityVersion}")
    implementation("org.springframework.security:spring-security-config:${springSecurityVersion}")
    implementation("org.springframework.security:spring-security-core:${springSecurityVersion}")
    implementation("org.springframework.security:spring-security-taglibs:${springSecurityVersion}")


    //jwt
    implementation("io.jsonwebtoken:jjwt-api:0.11.5")
    runtimeOnly("io.jsonwebtoken:jjwt-impl:0.11.5")
    implementation("io.jsonwebtoken:jjwt-jackson:0.11.5")


    // AOP
    implementation 'org.aspectj:aspectjrt:1.9.20'
    implementation 'org.aspectj:aspectjweaver:1.9.20'

    // JSP, SERVLET, JSTL
    implementation('javax.servlet:javax.servlet-api:4.0.1')
    compileOnly 'javax.servlet.jsp:jsp-api:2.1'
    implementation 'javax.servlet:jstl:1.2'

    // Logging
//    implementation 'org.slf4j:slf4j-api:2.0.9'
//    runtimeOnly 'org.slf4j:jcl-over-slf4j:2.0.9'
//    runtimeOnly 'org.slf4j:slf4j-log4j12:2.0.9'
//    implementation 'log4j:log4j:1.2.17'

    // Log4j2
    implementation 'org.apache.logging.log4j:log4j-api:2.18.0'
    implementation 'org.apache.logging.log4j:log4j-core:2.18.0'
//    implementation 'org.slf4j:slf4j-api:2.0.13'
    implementation 'org.apache.logging.log4j:log4j-slf4j-impl:2.18.0'


    implementation 'org.bgee.log4jdbc-log4j2:log4jdbc-log4j2-jdbc4:1.16'
    implementation 'org.apache.logging.log4j:log4j-api:2.0.1'
    implementation 'org.apache.logging.log4j:log4j-core:2.0.1'


    // xml내 한글 처리
    implementation 'xerces:xercesImpl:2.12.2'

    // Lombok
    compileOnly "org.projectlombok:lombok:${lombokVersion}"
    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"

    // Jackson - Json 처리
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.9.4'

    // 데이터베이스
    implementation 'com.mysql:mysql-connector-j:8.1.0'
    implementation 'com.zaxxer:HikariCP:2.7.4'

    implementation "org.springframework:spring-tx:${springVersion}"
    implementation "org.springframework:spring-jdbc:${springVersion}"

    implementation 'org.mybatis:mybatis:3.4.6'
    implementation 'org.mybatis:mybatis-spring:1.3.2'

    // flyway
    implementation 'org.flywaydb:flyway-mysql:11.7.2'
    implementation 'org.flywaydb:flyway-core:11.7.2'

    // swagger
    implementation 'io.springfox:springfox-swagger2:2.9.2'
    implementation 'io.springfox:springfox-swagger-ui:2.9.2'

    //유효성 검사 관련 어노테이션 사용
    implementation 'javax.validation:validation-api:2.0.1.Final'
    implementation 'org.hibernate.validator:hibernate-validator:6.0.13.Final'


    // 테스트
    testImplementation "org.springframework:spring-test:${springVersion}"
    testCompileOnly "org.projectlombok:lombok:${lombokVersion}"
    testAnnotationProcessor "org.projectlombok:lombok:${lombokVersion}"

    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"

    //webClient
    implementation 'org.springframework:spring-webflux:5.3.37' // Spring 5.x 호환 WebClient
    implementation 'io.projectreactor:reactor-core:3.4.33'      // Reactor 필요
    implementation 'io.projectreactor.netty:reactor-netty-http:1.0.40'

    // Spring Batch 핵심 라이브러리
    implementation 'org.springframework.batch:spring-batch-core:4.3.10'

    implementation 'jakarta.annotation:jakarta.annotation-api:2.1.1'



}


test {
    useJUnitPlatform()
}
kotlin {
    jvmToolchain(17)
}